--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "ethers": "^5.6.9",
     "jest": "^28.1.3",
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.2",
