--- a/snap.manifest.json
+++ b/snap.manifest.json
@@ -1,13 +1,13 @@
 {
   "version": "1.1.0",
-  "proposedName": "MetaMask Template Snap",
-  "description": "A MetaMask Snap template with better development experience Next.js and Typescript.",
+  "proposedName": "Monerium Snap",
+  "description": "Fiat-to-crypto, crypto-to-fiat integration",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/snap-template.git"
   },
   "source": {
-    "shasum": "PT4Ei5Kl5i/oGfzgNBAV7DERlzuijv9KpBvlRloeSj4=",
+    "shasum": "tQo99RqqoeO2kb12EFK99GLSm1iFagZwH8p4FHsS0uE=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -18,7 +18,9 @@
     }
   },
   "initialPermissions": {
-    "snap_confirm": {}
+    "snap_confirm": {},
+    "endowment:network-access": {},
+    "snap_manageState": {}
   },
   "manifestVersion": "0.1"
 }
