--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "watch": "mm-snap watch"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -59,6 +60,7 @@
     "jest": "^28.1.3",
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.2",
+    "react-toast-notifications": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "4.7.4"
   },
