--- a/snap.manifest.json
+++ b/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snap-template.git"
   },
   "source": {
-    "shasum": "tQo99RqqoeO2kb12EFK99GLSm1iFagZwH8p4FHsS0uE=",
+    "shasum": "sxTsAontXgNdqb1JaA0E2lPaJKJX77CN7aMg51NFMKA=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -18,6 +18,7 @@
     }
   },
   "initialPermissions": {
+    "snap_notify": {},
     "snap_confirm": {},
     "endowment:network-access": {},
     "snap_manageState": {}
