--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "cookies": "^0.8.0",
+    "cookies-next": "^2.1.1",
     "crypto-js": "^4.1.1",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
