--- a/snap.manifest.json
+++ b/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snap-template.git"
   },
   "source": {
-    "shasum": "2GBfNjNeQqWXsbDrMqMFB29G4K6KNlpsJm14hDib0kc=",
+    "shasum": "pgSc+lcDOkDgimUBTZS/jOx/gzlQ26i313SQjV3V5UU=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -18,6 +18,7 @@
     }
   },
   "initialPermissions": {
+    "endowment:long-running": {},
     "snap_notify": {},
     "snap_confirm": {},
     "endowment:network-access": {},
